10_ecs-common/ecs-security-group.yml
AWSTemplateFormatVersion: "2010-09-09" 
Description: "References to created ECS SecurityGroups"

Parameters:
  Env:
    Description: HON, DEV
    Type: String
    Default: DEV

  SystemName:
    Description: Enter SystemName
    Type: String
    Default: sample

  VpcId:
    Description: Select VPCID from SSM Prameter Store.
    Type: AWS::SSM::Parameter::Value<String>
    Default: sample-DEV-ps-vpcid

Resources:
# ECSSecurityGroup01
  ECSSecurityGroup01:
    Type: AWS::EC2::SecurityGroup
    Properties:
        GroupDescription: !Sub ${SystemName}-${Env}-ECS-SecurityGroup01
        GroupName: !Sub ${SystemName}-${Env}-ECS-SecurityGroup01
        VpcId: !Ref VpcId
        SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: 0.0.0.0/0

        Tags:
          - Key: Name
            Value: !Sub ${SystemName}-${Env}-ECS-SecurityGroup01

        SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

        - IpProtocol: tcp
          FromPort : 8080
          ToPort : 8080
          CidrIp: 0.0.0.0/0

# ECSSecurityGroup02
  ECSSecurityGroup02:
    Type: AWS::EC2::SecurityGroup
    Properties:
        GroupDescription: !Sub ${SystemName}-${Env}-ECS-SecurityGroup02
        GroupName: !Sub ${SystemName}-${Env}-ECS-SecurityGroup02
        VpcId: !Ref VpcId
        SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: 0.0.0.0/0

        Tags:
          - Key: Name
            Value: !Sub ${SystemName}-${Env}-ECS-SecurityGroup02

        SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

        - IpProtocol: tcp
          FromPort : 8080
          ToPort : 8080
          CidrIp: 0.0.0.0/0

# --------------------------------------------------------------
# Parameter Store
# --------------------------------------------------------------

  # ecssecuritygroup01:
  #   Type: AWS::SSM::Parameter
  #   Properties: 
  #     Name: !Sub ${SystemName}-${Env}-ECS-SecurityGroup01
  #     Description: Create ECS SecurityGroup01 in SSM Parameter Store.
  #     Type: String
  #     Value: !Ref ECSSecurityGroup01

  ecssecuritygroups:
    Type: AWS::SSM::Parameter
    Properties: 
      Name: !Sub ${SystemName}-${Env}-ecs-securitygroups
      Description: Create a ecs securitygroups for the VPC in the SSM Parameter Store.
      Type: StringList
      Value: sg-072731a1c5abfba01, sg-0889ed6e101489dca
